--- a/index.html
+++ b/index.html
@@ -41,7 +41,19 @@
             <p>Lightweight CSS without heavy libraries.</p>
         </div>
     </section>
+    
+<!-- AI Feature Generator -->
+<section class="ai-feature">
+    <h2>AI Feature Generator</h2>
+    <p>Click the button to generate smart AI-style features.</p>
 
+    <button id="generateBtn">Generate Features</button>
+
+    <div class="feature-container" id="featureContainer"></div>
+</section>
+
+<!-- JavaScript -->
+<script src="script.js"></script>
     <!-- Footer -->
     <footer>
         © 2026 AIWeb. All Rights Reserved.
