--- a/index.html
+++ b/index.html
@@ -1,63 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI Style Responsive Website</title>
-    <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <title>Future UI Website</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="style.css">
+
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
-    <!-- Navbar -->
-    <header class="navbar">
-        <div class="logo">AI<span>Web</span></div>
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">Features</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
-        </nav>
-    </header>
-
-    <!-- Hero Section -->
+    <!-- HERO SECTION -->
     <section class="hero">
-        <h1>Build Smart. Build Fast.</h1>
-        <p>AI-inspired modern responsive website using HTML & CSS.</p>
-        <button>Get Started</button>
+        <h1 class="hero-text">THE FUTURE IS NOW</h1>
+        <p class="hero-sub">Next-Generation Web Experience</p>
+        <button class="btn">Explore</button>
     </section>
 
-    <!-- Cards Section -->
-    <section class="cards">
-        <div class="card">
-            <h3>Smart Design</h3>
-            <p>Minimal UI with AI-inspired layout and animations.</p>
-        </div>
-        <div class="card">
-            <h3>Responsive</h3>
-            <p>Fully responsive for mobile, tablet, and desktop.</p>
-        </div>
-        <div class="card">
-            <h3>Fast Load</h3>
-            <p>Lightweight CSS without heavy libraries.</p>
-        </div>
+    <!-- SECTION 1 -->
+    <section class="section">
+        <h2>Advanced Technology</h2>
+        <p>Powered by modern animations and smooth interactions.</p>
     </section>
-    
-<!-- AI Feature Generator -->
-<section class="ai-feature">
-    <h2>AI Feature Generator</h2>
-    <p>Click the button to generate smart AI-style features.</p>
 
-    <button id="generateBtn">Generate Features</button>
+    <!-- SECTION 2 -->
+    <section class="section">
+        <h2>Futuristic Design</h2>
+        <p>Neon glow, glass effects, and immersive motion.</p>
+    </section>
 
-    <div class="feature-container" id="featureContainer"></div>
-</section>
+    <!-- SECTION 3 -->
+    <section class="section">
+        <h2>High Performance</h2>
+        <p>Optimized animations with GSAP.</p>
+    </section>
 
-<!-- JavaScript -->
-<script src="script.js"></script>
-    <!-- Footer -->
-    <footer>
-        © 2026 AIWeb. All Rights Reserved.
-    </footer>
+    <!-- GSAP -->
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3/dist/ScrollTrigger.min.js"></script>
 
+    <!-- JS -->
+    <script src="script.js"></script>
 </body>
 </html>
